# mcp-karma

./: .actrc  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  ROADMAP.md  justfile  pyproject.toml
.github/: DOCKER_HUB_SETUP.md  README.md  SECRETS_SETUP.md
.github/workflows/: build-and-deploy.yml  ci.yml  deploy.yml  docker-release.yml  pr-review.yml  pr.yml  quality.yml  test.yml
docker/: .dockerignore  .env.docker  Dockerfile  README.md  build.sh  docker-compose.yml  run.sh
helm/karma-mcp/: Chart.yaml  README.md  values-examples.yaml  values.yaml
helm/karma-mcp/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
scripts/: ci-validate.py  run_tests.py  test_karma.py  validate.py
src/karma_mcp/: http_server.py  prompts.py  server.py
tests/: conftest.py
tests/fixtures/: karma_data.py
tests/integration/: test_http_server_e2e.py  test_karma_integration.py
tests/unit/: test_basic_functionality.py  test_http_server.py  test_mcp_tools.py
